X11-Include.xxxxxxxxxxxxxxxx/X11/extensions/Xrender.pp


function XRenderFindStandardFormat(dpy:PDisplay; format:longint):PXRenderPictFormat;cdecl;external;
(* error 
			    _Xconst XRenderPictFormat	*format,
(* error 
			    int				*num);
 in declarator_list *)
 in declarator_list *)
(* error 
		      _Xconst XRenderPictFormat		*format,
(* error 
		      unsigned long			valuemask,
(* error 
		      _Xconst XRenderPictureAttributes	*attributes);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
		      _Xconst XRenderPictureAttributes  *attributes);
 in declarator_list *)
(* error 
				 _Xconst XRectangle *rects,
(* error 
				 int		    n);
 in declarator_list *)
 in declarator_list *)
procedure XRenderSetPictureClipRegion(dpy:PDisplay; picture:TPicture; r:TRegion);cdecl;external;
procedure XRenderSetPictureTransform(dpy:PDisplay; picture:TPicture; transform:PXTransform);cdecl;external;
procedure XRenderFreePicture(dpy:PDisplay; picture:TPicture);cdecl;external;
procedure XRenderComposite(dpy:PDisplay; op:longint; src:TPicture; mask:TPicture; dst:TPicture; 
            src_x:longint; src_y:longint; mask_x:longint; mask_y:longint; dst_x:longint; 
            dst_y:longint; width:dword; height:dword);cdecl;external;
(* error 
XRenderCreateGlyphSet (Display *dpy, _Xconst XRenderPictFormat *format);
 in declarator_list *)
function XRenderReferenceGlyphSet(dpy:PDisplay; existing:TGlyphSet):TGlyphSet;cdecl;external;
procedure XRenderFreeGlyphSet(dpy:PDisplay; glyphset:TGlyphSet);cdecl;external;
(* error 
		  _Xconst Glyph		*gids,
(* error 
		  _Xconst XGlyphInfo	*glyphs,
(* error 
		  int			nglyphs,
(* error 
		  _Xconst char		*images,
(* error 
		  int			nbyte_images);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
		   _Xconst Glyph    *gids,
(* error 
		   int		    nglyphs);
 in declarator_list *)
 in declarator_list *)
(* error 
			 _Xconst XRenderPictFormat  *maskFormat,
(* error 
			 GlyphSet		    glyphset,
(* error 
			 int			    xSrc,
(* error 
			 int			    ySrc,
(* error 
			 int			    xDst,
(* error 
			 int			    yDst,
(* error 
			 _Xconst char		    *string,
(* error 
			 int			    nchar);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
			  _Xconst XRenderPictFormat *maskFormat,
(* error 
			  GlyphSet		    glyphset,
(* error 
			  int			    xSrc,
(* error 
			  int			    ySrc,
(* error 
			  int			    xDst,
(* error 
			  int			    yDst,
(* error 
			  _Xconst unsigned short    *string,
(* error 
			  int			    nchar);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
			  _Xconst XRenderPictFormat *maskFormat,
(* error 
			  GlyphSet		    glyphset,
(* error 
			  int			    xSrc,
(* error 
			  int			    ySrc,
(* error 
			  int			    xDst,
(* error 
			  int			    yDst,
(* error 
			  _Xconst unsigned int	    *string,
(* error 
			  int			    nchar);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
		       _Xconst XRenderPictFormat    *maskFormat,
(* error 
		       int			    xSrc,
(* error 
		       int			    ySrc,
(* error 
		       int			    xDst,
(* error 
		       int			    yDst,
(* error 
		       _Xconst XGlyphElt8	    *elts,
(* error 
		       int			    nelt);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
			_Xconst XRenderPictFormat   *maskFormat,
(* error 
			int			    xSrc,
(* error 
			int			    ySrc,
(* error 
			int			    xDst,
(* error 
			int			    yDst,
(* error 
			_Xconst XGlyphElt16	    *elts,
(* error 
			int			    nelt);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
			_Xconst XRenderPictFormat   *maskFormat,
(* error 
			int			    xSrc,
(* error 
			int			    ySrc,
(* error 
			int			    xDst,
(* error 
			int			    yDst,
(* error 
			_Xconst XGlyphElt32	    *elts,
(* error 
			int			    nelt);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
		      _Xconst XRenderColor  *color,
(* error 
		      int		    x,
(* error 
		      int		    y,
(* error 
		      unsigned int	    width,
(* error 
		      unsigned int	    height);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
		       _Xconst XRenderColor *color,
(* error 
		       _Xconst XRectangle   *rectangles,
(* error 
		       int		    n_rects);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
			    _Xconst XRenderPictFormat	*maskFormat,
(* error 
			    int			xSrc,
(* error 
			    int			ySrc,
(* error 
			    _Xconst XTrapezoid	*traps,
(* error 
			    int			ntrap);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
			    _Xconst XRenderPictFormat	*maskFormat,
(* error 
			   int			xSrc,
(* error 
			   int			ySrc,
(* error 
			   _Xconst XTriangle	*triangles,
(* error 
			   int			ntriangle);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
			    _Xconst XRenderPictFormat	*maskFormat,
(* error 
			  int			xSrc,
(* error 
			  int			ySrc,
(* error 
			  _Xconst XPointFixed	*points,
(* error 
			  int			npoint);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
			_Xconst XRenderPictFormat	*maskFormat,
(* error 
			int			xSrc,
(* error 
			int			ySrc,
(* error 
			_Xconst XPointFixed	*points,
(* error 
			int			npoint);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
(* error 
			    _Xconst XRenderPictFormat	*maskFormat,
(* error 
			    int			    xSrc,
(* error 
			    int			    ySrc,
(* error 
			    int			    xDst,
(* error 
			    int			    yDst,
(* error 
			    _Xconst XPointDouble    *fpoints,
(* error 
			    int			    npoints,
(* error 
			    int			    winding);
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
 in declarator_list *)
function XRenderParseColor(dpy:PDisplay; spec:Pchar; def:PXRenderColor):TStatus;cdecl;external;
function XRenderCreateCursor(dpy:PDisplay; source:TPicture; x:dword; y:dword):TCursor;cdecl;external;
function XRenderQueryFilters(dpy:PDisplay; drawable:TDrawable):PXFilters;cdecl;external;
procedure XRenderSetPictureFilter(dpy:PDisplay; picture:TPicture; filter:Pchar; params:PXFixed; nparams:longint);cdecl;external;
function XRenderCreateAnimCursor(dpy:PDisplay; ncursor:longint; cursors:PXAnimCursor):TCursor;cdecl;external;
(* error 
		 _Xconst XTrap	    *traps,
(* error 
		 int		    ntrap);
 in declarator_list *)
 in declarator_list *)
function XRenderCreateSolidFill(dpy:PDisplay; color:PXRenderColor):TPicture;cdecl;external;
function XRenderCreateLinearGradient(dpy:PDisplay; gradient:PXLinearGradient; stops:PXFixed; colors:PXRenderColor; nstops:longint):TPicture;cdecl;external;
function XRenderCreateRadialGradient(dpy:PDisplay; gradient:PXRadialGradient; stops:PXFixed; colors:PXRenderColor; nstops:longint):TPicture;cdecl;external;
function XRenderCreateConicalGradient(dpy:PDisplay; gradient:PXConicalGradient; stops:PXFixed; colors:PXRenderColor; nstops:longint):TPicture;cdecl;external;
{$endif}

(* error 
#endif /* _XRENDER_H_ */

implementation

function XDoubleToFixed(f : longint) : TXFixed;
begin
  XDoubleToFixed:=TXFixed(f*65536);
end;

function XFixedToDouble(f : longint) : longint;
begin
  XFixedToDouble:=(TXDouble(f))/65536;
end;


end.
